realizando ajustes gerais no site

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Plano Certo Seguradora</title>
+    <title>Plano Certo Corretora de Seguros</title>
 
     <!-- Favicon-->
     <link
@@ -59,9 +59,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/pages/quem-somos.html">Quem somos</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#!">Produtos</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pages/produtos.html">Produtos</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">Fale conosco</a>
+              <a class="nav-link" href="/pages/">Fale conosco</a>
             </li>
           </ul>
         </div>
@@ -69,7 +69,7 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container px-4 px-lg-5">
+    <div class="container-fluid px-4 px-lg-5">
       <!-- Heading Row -->
       <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <!-- Carrossel -->
@@ -115,8 +115,8 @@
         <div class="col-lg-5">
           <h1 class="font-weight-light">Quem somos</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Perferendis quasi tempore consequuntur...
+            Com mais de 30 anos de experiência, somos referência em soluções de seguros personalizadas. 
+            <br>Trabalhamos com as melhores seguradoras para proteger o que realmente importa para você.
           </p>
           <a class="btn btn-custom" href="#!">Saiba mais</a>
         </div>
@@ -138,7 +138,7 @@
         <div class="col-lg-5">
           <h1 class="font-weight-light">Produtos</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptate...
+            Oferecemos seguros para viagem, automóveis, residências, saúde, vida e muito mais, com coberturas pensadas para sua tranquilidade.
           </p>
           <a class="btn btn-custom" href="#!">Ver produtos</a>
         </div>
@@ -160,8 +160,8 @@
         <div class="col-lg-5">
           <h1 class="font-weight-light">Fale conosco</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Consequuntur sit commodi est earum...
+            Estamos sempre prontos para ajudar! <br>
+            Entre em contato e descubra como podemos oferecer a proteção ideal para suas necessidades.
           </p>
           <a class="btn btn-custom" href="#!">Entrar em contato!</a>
         </div>
@@ -170,18 +170,7 @@
   </div>
 </div>
 
-        <!-- Call to Action -->
-        <div class="card my-5 py-4 text-center">
-          <div class="card-body">
-            <p class="text-white m-0">
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero
-              cum rerum laboriosam consequatur culpa eos deserunt fuga expedita
-              eius, consectetur delectus rem, aliquid reprehenderit? Iure
-              recusandae esse reprehenderit vero nobis!
-            </p>
-          </div>
-        </div>
-
+   
         <!-- Content Row -->
         <div class="info-div">
           <div class="row gx-4 gx-lg-5 info-row">
@@ -190,13 +179,11 @@
                 <div class="card-body">
                   <h2 class="card-title">Quem somos?</h2>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Rem magni quas ex numquam, maxime minus quam molestias
-                    corporis quod, ea minima accusamus.
+                    Com mais de 30 anos de experiência, somos referência em soluções de seguros personalizadas. Trabalhamos com as melhores seguradoras para proteger o que realmente importa para você. Saiba mais.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-custom2 btn-sm" href="#!"
+                  <a class="btn btn-custom2 btn-sm" href="/pages/quem-somos.html"
                     >Mais Informações</a
                   >
                 </div>
@@ -207,14 +194,11 @@
                 <div class="card-body">
                   <h2 class="card-title">Produtos</h2>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Quod tenetur ex natus at dolorem enim! Nesciunt pariatur
-                    voluptatem sunt quam eaque, vel, non in id dolore voluptates
-                    quos eligendi labore.
+                    Oferecemos seguros para viagem, automóveis, residências, saúde, vida e muito mais, com coberturas pensadas para sua tranquilidade.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-custom2 btn-sm" href="#!"
+                  <a class="btn btn-custom2 btn-sm" href="/pages/produtos.html"
                     >Mais Informações</a
                   >
                 </div>
@@ -225,13 +209,11 @@
                 <div class="card-body">
                   <h2 class="card-title">Fale conosco</h2>
                   <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Rem magni quas ex numquam, maxime minus quam molestias
-                    corporis quod, ea minima accusamus.
+                    Estamos sempre prontos para ajudar! Entre em contato e descubra como podemos oferecer a proteção ideal para suas necessidades.
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a class="btn btn-custom2 btn-sm" href="#!"
+                  <a class="btn btn-custom2 btn-sm" href="/pages/fale-conosco.html"
                     >Mais Informações</a
                   >
                 </div>
