--- a/pages/quem-somos.html
+++ b/pages/quem-somos.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="Quem Somos - Plano Certo Seguradora" />
-    <meta name="author" content="Plano Certo Seguradora" />
-    <title>Quem Somos | Plano Certo Seguradora</title>
+    <meta name="description" content="Quem Somos - Plano Certo" />
+    <meta name="author" content="Plano Certo Corretora de Seguros" />
+    <title>Quem Somos | Plano Certo</title>
 
     <!-- Favicon-->
     <link
@@ -31,10 +31,11 @@
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-md custom-navbar">
-      <div class="container px-5">
+      <div class="container px-5 d-flex align-items-center">
         <img src="/assets/images/logo.png" alt="Logo" class="nav-bar-logo" />
+
         <button
-          class="navbar-toggler"
+          class="navbar-toggler ms-auto"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
@@ -45,98 +46,86 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
             <li class="nav-item">
-              <a class="nav-link active" href="quem-somos.html">Quem somos</a>
+              <a class="nav-link" href="/index.html">Home</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="produtos.html">Produtos</a></li>
-            <li class="nav-item"><a class="nav-link" href="contato.html">Fale conosco</a></li>
-          </ul>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#!"
+                >Quem somos</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/produtos.html">Produtos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/pages/fale-conosco.html"
+                >Fale conosco</a
+              >
+            </li>
+          </ul> 
         </div>
       </div>
     </nav>
 
     <!-- Main Content -->
-    <div class="container px-4 px-lg-5">
+    <div class="container-fluid px-4 px-lg-5">
       <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col-lg-6">
           <img
             class="img-fluid rounded mb-4"
             src="/assets/images/equipe-plano-certo.png"
-            alt="Equipe da Plano Certo Seguradora"
+            alt="Equipe da Plano Certo Corretora de Seguros"
           />
         </div>
         <div class="col-lg-6">
           <h1 class="font-weight-light">Quem Somos</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et labore tempore quaerat, in saepe pariatur nihil id quas, sed necessitatibus voluptatum autem quibusdam possimus neque fugit voluptatem accusamus, rerum amet.
+            Há mais de 30 anos, estamos no mercado para garantir tranquilidade,
+            proteção e segurança aos nossos clientes. Como uma corretora de
+            seguros comprometida com a excelência, unimos tradição e inovação
+            para oferecer as melhores soluções personalizadas, atendendo às suas
+            necessidades em diferentes áreas.
           </p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, fugiat ipsa! Autem labore quod laborum in odio eveniet, pariatur temporibus natus magni non debitis tempora quam praesentium exercitationem ex maiores?
+            Trabalhamos com seguradoras líderes no mercado, como Porto Seguro,
+            Azul Seguros, Itaú Seguros, Mitsui, Allianz, Tokio Marine, HDI,
+            Yellun e Suhai, garantindo não apenas proteção, mas também a
+            confiança de que você estará sempre amparado.
+          </p>
+          <p>
+            Nossa missão é simplificar sua vida, cuidando do que é importante
+            para você, enquanto você se dedica ao que realmente importa. Seja
+            qual for sua necessidade, estamos aqui para criar uma solução sob
+            medida e oferecer a experiência de um atendimento humano e de
+            qualidade.
           </p>
           <a class="btn btn-custom" href="contato.html">Entre em contato</a>
         </div>
       </div>
 
-      <!-- Valores da empresa -->
-      <div class="row gx-4 gx-lg-5 my-5">
-        <div class="col-lg-4 mb-5">
-          <div class="card h-100 text-center">
-            <div class="card-body">
-              <h2 class="card-title">Missão</h2>
-              <p class="card-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae nam, rem odit nisi quia dolorem laboriosam atque ratione eos perspiciatis nulla veniam deleniti doloribus soluta similique voluptates maiores blanditiis. Maiores.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-5">
-          <div class="card h-100 text-center">
-            <div class="card-body">
-              <h2 class="card-title">Visão</h2>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore neque ab sequi omnis voluptas laboriosam, mollitia id exercitationem itaque voluptate minus! Quam laboriosam quisquam laudantium minus! Dolorum tenetur ducimus distinctio!
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-5">
-          <div class="card h-100 text-center">
-            <div class="card-body">
-              <h2 class="card-title">Valores</h2>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem nulla velit vitae nihil sequi incidunt voluptas dignissimos, numquam maxime quae assumenda aliquam quaerat sapiente impedit debitis est cupiditate tempore facilis!
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- Bootstrap JS -->
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"
+      ></script>
     </div>
-
-    <!-- Footer -->
-    <footer class="footer bg-footer py-4 text-white">
-      <div class="container-fluid px-5 text-center">
-        <p class="mb-2">
-          &copy; 2025 Plano Certo Corretora de Seguros LTDA. Todos os direitos
-          reservados.
-        </p>
-        <p class="mb-0">
-          Rua Desembargador Rafael Fleury Ferraz de Sampaio, 213 - 05171-580 -
-          São Paulo/SP<br />
-          (11) 2925 - 4500 | (11) 2476 - 2646 | (11) 98314-4586<br />
-          <a href="mailto:planocertoseguros@uol.com.br" class="text-white">
-            planocertoseguros@uol.com.br
-          </a>
-        </p>
-      </div>
-    </footer>
-
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
   </body>
+  <footer class="footer bg-footer py-4 text-white">
+    <div class="container-fluid px-5 text-center">
+      <p class="mb-2">
+        &copy; 2025 Plano Certo Corretora de Seguros LTDA. Todos os direitos
+        reservados.
+      </p>
+      <p class="mb-0">
+        Rua Desembargador Rafael Fleury Ferraz de Sampaio, 213 - 05171-580 - São
+        Paulo/SP<br />
+        (11) 2925 - 4500 | (11) 2476 - 2646 | (11) 98314-4586<br />
+        <a href="mailto:planocertoseguros@uol.com.br" class="text-white">
+          planocertoseguros@uol.com.br
+        </a>
+      </p>
+    </div>
+  </footer>
 </html>
