--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="card-body">
                   <h2 class="card-title">Quem somos?</h2>
                   <p class="card-text">
-                    Com mais de 30 anos de experiência, somos referência em soluções de seguros personalizadas. Trabalhamos com as melhores seguradoras para proteger o que realmente importa para você. Saiba mais.
+                    Com mais de 30 anos de experiência, somos referência em soluções de seguros personalizadas. Trabalhamos com as melhores seguradoras para proteger o que realmente importa para você.
                   </p>
                 </div>
                 <div class="card-footer">
