correção no css produtos

--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="Principais serviços de seguro oferecidos" />
     <meta name="author" content="" />
-    <title>Produtos - Plano Certo Corretora de Seguros</title>
+    <title>Produtos - Plano Certo</title>
 
     <!-- Favicon -->
     <link
@@ -26,7 +26,7 @@
     />
 
     <!-- CSS Personalizado -->
-    <link href="../css/index.css" rel="stylesheet" />
+    <link href="../css/pages/produtos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navbar -->
